--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "useref": "^1.4.4",
+    "video-js": "^0.7.0",
+    "video.js": "^8.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
